Address feedback, add tests
Signed-off-by: Edwin Greene <edwin@swirldslabs.com>